# origami

./: Cargo.toml  README.md
crates/chem/: Cargo.toml
crates/chem/src/: amino_acid.rs  atom_type.rs  codon.rs  element.rs  forcefield.rs  lib.rs  nucleotide.rs  properties.rs  topology.rs  topology_data.rs
crates/chem/tests/: codon_table.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/dynamics/: Cargo.toml
crates/dynamics/src/: cotranslate.rs  energy_eval.rs  langevin.rs  lbfgs.rs  lib.rs  line_search.rs  minimize.rs  remd.rs  rng.rs  shake.rs  steepest_descent.rs
crates/dynamics/tests/: cotranslate_acceptance.rs  crambin_disulfide.rs  insulin_multichain.rs  langevin_thermostat.rs  m7_native_stability.rs  remd_acceptance.rs  sasa_force_minimise.rs  shake_dt2.rs  trp_cage_minimise.rs
crates/energy/: Cargo.toml
crates/energy/src/: bonded.rs  forces.rs  forces_bonded.rs  forces_gb.rs  forces_nonbonded.rs  forces_sasa.rs  gb.rs  lib.rs  nonbonded.rs  sasa.rs  scratch.rs  units.rs
crates/energy/src/powersasa/: analytical.rs  area.rs  arrangement.rs  derivatives.rs  geometry.rs  mod.rs
crates/geom/: Cargo.toml
crates/geom/src/: analysis.rs  builder.rs  cluster.rs  dssp.rs  lib.rs  measure.rs  neighbours.rs  nerf.rs  rmsd.rs  secondary_structure.rs  structure.rs  topology_graph.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs  pdb.rs  pdb_read.rs  render.rs
crates/io/tests/: build_all_residues.rs  enumerate_ff_tuples.rs  m7_native_vs_extended.rs  trp_cage_acceptance.rs
crates/translate/: Cargo.toml
crates/translate/src/: fasta.rs  lib.rs  orf.rs  translate.rs
crates/translate/tests/: known_proteins.rs
data/charmm36/: README.md
docs/data/: chignolin_cotsasa_rmsd.tsv  chignolin_native_sasa_g025_rmsd.tsv  chignolin_native_sasa_g050_rmsd.tsv  chignolin_native_sasa_g100_rmsd.tsv  chignolin_remd_rmsd.tsv  chignolin_remd_sasa_rmsd.tsv  chignolin_rmsd.tsv  chignolin_sasa_g025_rmsd.tsv  chignolin_sasa_g025_seed11_rmsd.tsv  chignolin_sasa_g025_seed7_rmsd.tsv  chignolin_sasa_g050_rmsd.tsv  chignolin_sasa_rmsd.tsv  trpcage_remd_rmsd.tsv  trpcage_sasa_g025_rmsd.tsv  villin_remd_long_rmsd.tsv  villin_remd_rmsd.tsv
examples/: insulin.fasta
