[workspace]
resolver = "2"
members = [
    "crates/chem",
    "crates/translate",
    "crates/geom",
    "crates/energy",
    "crates/dynamics",
    "crates/io",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/magicaltux/origami"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
approx = "0.5"
nalgebra = "0.34"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
