[package]
name = "dynamics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Energy minimization and (later) molecular dynamics for origami."

[dependencies]
chem = { path = "../chem" }
geom = { path = "../geom" }
energy = { path = "../energy" }
rayon.workspace = true

[dev-dependencies]
approx.workspace = true
io = { path = "../io" }
