[package]
name = "geom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "3D geometry, internal coordinates, and chain construction for origami."

[dependencies]
chem = { path = "../chem" }
nalgebra.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
