[package]
name = "translate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "mRNA → amino-acid sequence translation for origami."

[dependencies]
chem = { path = "../chem" }
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
